--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "canvas-prebuilt": "1.6.5-prerelease.1",
-    "chart.js": "2.7.2",
-    "chartjs-node-canvas": "1.1.6"
+    "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "chart.js": "^2.7.2",
+    "chartjs-node-canvas": "^1.1.6"
   }
 }
