--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cubejs-client/core": "^0.1.4",
     "canvas-prebuilt": "^1.6.5-prerelease.1",
     "chart.js": "^2.7.2",
     "chartjs-node-canvas": "^1.1.6"
+  },
+  "devDependencies": {
+    "serverless-offline": "^3.31.3"
   }
 }
